# crewai-demos

./: README.md
demo_001/: README.md  pyproject.toml  report-01.md  report.md
demo_001/src/demo_001/: crew.py  main.py
demo_001/src/demo_001/config/: agents.yaml  tasks.yaml
